--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,8 +13,8 @@
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244498.md#1" title="分享中国传统文化 新世纪中秋游园日受褒奖""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244483.md#1" title="恒大受害人患病求兑付被拒 维权遭警传唤""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vuwsmg331.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/13/n13228858.md#1">汽车保险最便宜和最昂贵的10款车</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245718.md#1">中秋赏月共婵娟 咏月诗词同欣赏</a><br>
@@ -24,12 +24,12 @@
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243341.md#1">谢金河：中国房企骨牌效应开始 最终影响内需</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243075.md#1">【中国观察】林彪刺毛50年与公安暗杀习的疑云</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244201.md#1">大陆土地市场频现流拍 房企集体“躺平”？</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244111.md#1">马克思主义学院又曝丑闻 女生举报教授猥亵</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243092.md#1">恒大债务危机蔓延 众多产业链企业陷绝境</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244209.md#1">李嘉诚卖掉上海一地产项目 套现21亿</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243038.md#1">【翻墙必看】分析：许家印有两种结局</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244109.md#1">如间谍小说 美英澳核潜艇协议达成细节曝光</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243308.md#1">高房价惹祸？出生率第一的深圳人不愿生育了</a><br>
-<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242539.md#1">【一线采访】恒大财富顾问质疑官方监管失职</a><br>
-<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br>
 <br><p align="center"><a href="https://github.com/vuwsmg331/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244627.md#1">【中国观察】李克强“灭火”党刊重提林彪政变</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244218.md#1">钟原：各方插手阿富汗事务 中共难填空白</a><br>
@@ -40,17 +40,17 @@
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242464.md#1">周晓辉：习直指政法系高层 未遂刺杀案透玄机</a><br>
 <br><p align="center"><a href="https://github.com/vuwsmg331/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1">分析：北京两举动曝中共军队致命弱点</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245126.md#1">恒大危机中共救不救？专家从四层面分析</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244627.md#1">【中国观察】李克强“灭火”党刊重提林彪政变</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245511.md#1">香港新选制下首次选举 选民人数不足5千</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245532.md#1">青海湖出现龙吸水奇观 网民：太震撼了</a><br>
-<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244111.md#1">马克思主义学院又曝丑闻 女生举报教授猥亵</a><br>
-<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244481.md#1">【一线采访】莆田病例急攀升 民众：大型灾难事件</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245613.md#1">中共继续“割韭菜” 令明星网红限期补税</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245504.md#1">中共突禁台湾水果 蔡英文：违反国际贸易规范</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242516.md#1">【秦鹏直播】大陆最惨富豪缩水270亿 下个是谁</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244937.md#1">佳节颂恩 大陆民众恭祝李洪志大师中秋快乐</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245425.md#1">中共北部战区面对三个方向的防御捉襟见肘</a><br>
-<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244209.md#1">李嘉诚卖掉上海一地产项目 套现21亿</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244218.md#1">钟原：各方插手阿富汗事务 中共难填空白</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244481.md#1">【一线采访】莆田病例急攀升 民众：大型灾难事件</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245464.md#1">李嘉欣富豪丈夫似一夜变老 被拍拄拐杖蹒跚求医</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/13/n13230075.md#1">律师眼中承受苦难的圣徒：绝食四年对抗中共</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13243883.md#1">【财商天下】财政赤字惊人增长 中共防公共风险</a><br>
@@ -100,24 +100,24 @@
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13236862.md#1">央视朱军性骚扰案宣判 弦子曝光庭审细节</a><br>
 <a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13236910.md#1">【重播】美英澳首脑宣布技术共享 联合抗共</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/Domenicgyt/vd9p/raw/master/public/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Domenicthks/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/Dirkvokm/vdwl/raw/master/public/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/Dominickdfw/vdtzrs/raw/master/public/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/Diondarh/vdqh/raw/master/public/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 53,013</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.240.220.101/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 53,013</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
 !共 383,811,982 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/06/Screen-Shot-2018-05-31-at-3.43.30-PM-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243972.md#1">用人权换气候合作？美议员忧拜登政府会让步</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243241.md#1">创建“铁路工人节” 火车司机李伟杰遭打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241660.md#1">余文生律师妻子许艳被禁出门 吁外界关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241453.md#1">巴中监狱称探视系统升级 不许黄琦母亲会见儿子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240672.md#1">重庆访民向中央督导组伸冤遭抓捕</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/08/151015074347100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13231438.md#1">小型中企在美上市 圈钱与做空游戏频上演</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242789.md#1">流水线空无一人 莆田鞋业遭疫情重创</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240806.md#1">分析：恒大并非“大到不能倒”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240953.md#1">四川泸县强震 泸州酒企200余吨白酒泄漏</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245613.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13199064-fan-bingbing-zhao-wei-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245613.md#1">中共继续“割韭菜” 令明星网红限期补税</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243606.md#1">上海原副市长兼公安局长龚道安受贿 当庭认罪</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244442.md#1">【翻墙必看】女生举报遭中共马列教授猥亵</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244181.md#1">美台四大举措可对中共攻台进行威慑</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/2-39-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240487.md#1">【一线采访】江西老妇被逼打疫苗后昏迷两次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238433.md#1">【一线采访】四川泸县强震 村民：损失严重</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237258.md#1">四川泸县发生6.0级地震 已致3死100伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245816.md#1">三退声明精选（2021/09/19）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243423.md#1">吴迪团伙攫金6.5亿 石家庄8警察充当保护伞</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237532.md#1">中国房价增速为八个月来最慢 专家谈背后原因</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/06/Screen-Shot-2018-05-31-at-3.43.30-PM-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243972.md#1">用人权换气候合作？美议员忧拜登政府会让步</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243241.md#1">创建“铁路工人节” 火车司机李伟杰遭打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241660.md#1">余文生律师妻子许艳被禁出门 吁外界关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241453.md#1">巴中监狱称探视系统升级 不许黄琦母亲会见儿子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240672.md#1">重庆访民向中央督导组伸冤遭抓捕</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/08/151015074347100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13231438.md#1">小型中企在美上市 圈钱与做空游戏频上演</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242789.md#1">流水线空无一人 莆田鞋业遭疫情重创</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13242539.md#1">【一线采访】恒大财富顾问质疑官方监管失职</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240806.md#1">分析：恒大并非“大到不能倒”</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050312-7be0ed7e4faf55601229d61bb0cc739a@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243606.md#1">上海原副市长兼公安局长龚道安受贿 当庭认罪</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244442.md#1">【翻墙必看】女生举报遭中共马列教授猥亵</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244181.md#1">美台四大举措可对中共攻台进行威慑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244023.md#1">中共申请加入CPTPP 澳洲：先撤销报复性关税</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/2-39-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240953.md#1">四川泸县强震 泸州酒企200余吨白酒泄漏</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240487.md#1">【一线采访】江西老妇被逼打疫苗后昏迷两次</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245816.md#1">三退声明精选（2021/09/19）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243423.md#1">吴迪团伙攫金6.5亿 石家庄8警察充当保护伞</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237532.md#1">中国房价增速为八个月来最慢 专家谈背后原因</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213741.md#1">双减冲击中国家庭：教育乱象 谁之过</a><br>
 <a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213551.md#1">双减冲击中国家庭：减的是负担还是希望</a><br>
 <a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183383.md#1">【独家】陕西“千人计划”名单曝光</a><br>
 <a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/1/n13203539.md#1">【独家】习思想进课堂 大学生首当其冲</a><br>
 <a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
 <a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220766.md#1">史上一只黑天鹅预告一场巨变  五行学说真玄妙</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/8/n13220263.md#1">【古韵流芳】晏殊《浣溪沙》花落燕归来的理趣</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/5/n13212383.md#1">修身齐家为国尽职 唐名臣柳公绰有古之遗风</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/31/n13200714.md#1">高智晟先生步入社会时经历的人心冷暖（下）</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/7/n13217507.md#1">【未解之谜】预言死亡 最离奇轮回故事</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/3/n13209078.md#1">【百年真相】“大爱”还是惨剧？三千孤儿入内蒙真相</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/2/n13204305.md#1">《普桑与神》Nicolas Poussin（上）</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/11/n13225731.md#1">乱世在劫妖魔出 张天师承命振天纲</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/3/n13207782.md#1">【人生之钥】清代商人用什么巧方教子成材？</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/17/n13242572.md#1">【古韵流芳】岳飞《满江红》慷慨悲壮神来之笔</a><br>
+<a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
