--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13199064-fan-bingbing-zhao-wei-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245613.md#1" target="_blank">中共继续“割韭菜” 令明星网红限期补税</a><br></h3>继2018年中共当局强化影视行业税收监管、明星补税约118亿元之后......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13235684-GettyImages-1235242848-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13244852.md#1" target="_blank">【一线采访】厦门多家医院停诊 民间恐慌</a><br></h3>福建近期的中共病毒（新冠肺炎）疫情中，不仅学校成为重灾区，而且至少......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245532.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13245610-ee830f4ae7a6ff64982673c9490d5536-320x200.png" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245532.md#1" target="_blank">青海湖出现龙吸水奇观 网民：太震撼了</a><br></h3>9月19日，青海湖上空出现“龙吸水”奇观，网友直呼：太震撼了！...<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank">分析：北京两举动曝中共军队致命弱点</a><br></h3>中共近年不断增加军费，企图在2049年打造“一流军队”。但外界已观......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13190200-GettyImages-74020207@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245684.md#1" target="_blank">分析：北京两举动曝中共军队致命弱点</a><br></h3>中共近年不断增加军费，企图在2049年打造“一流军队”。但外界已观......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245504.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13004871-501538-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245504.md#1" target="_blank">中共突禁台湾水果 蔡英文：违反国际贸易规范</a><br></h3>中共9月19日突然又以“虫害”为由叫停台湾水果的进口。台湾总统和副......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245484.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/06/Screen-Shot-2018-05-31-at-3.43.30-PM-320x200.png" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/19/n13245484.md#1" target="_blank">DAFOH主任：中共活摘器官行径可输出到他国</a><br></h3>“医生反对活摘器官组织”（DAFOH）创办人及执行主任托斯坦·特雷......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244300.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2007/04/704290912211616-320x200.jpg" align ="left"></a><a href="https://github.com/vuwsmg331/djy/blob/master/gb/21/9/18/n13244300.md#1" target="_blank">中国留学生加拿大发推 中共网警跨海威胁</a><br></h3>加拿大《多伦多星报》（Toronto Star）周六（9月18日）......<br><img align="bottom" src="https://raw.githubusercontent.com/vuwsmg331/www/master/t/ntdtv/time.gif">09月20日</td></tr>
