--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13241909.md#1" title="在Costco买食品 八种最实惠 五种不合算""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12983256-GettyImages-756618-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243925.md#1" title="核潜艇威慑力大 攻击型和弹道导弹型有何区别""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/50517609786_370824c32a_o-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://zdhfsi3794.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13245936.md#1">为什么乔布斯不让他的孩子使用 iPads？</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246128.md#1">总价均超1500万 深圳龙华豪宅业主集体要求退房</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246166.md#1">美加紧遣返非法移民 海地官员称难安置归国者</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246297.md#1">印度男子为小狗包下飞机整个商务舱</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246143.md#1">中共禁台水果 吴钊燮：它这样还想进CPTPP？</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13245936.md#1">为什么乔布斯不让他的孩子使用 iPads？</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246128.md#1">怀疑遭诈欺 深圳龙华豪宅业主集体要求退房</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/20/n13246166.md#1">美加紧遣返非法移民 海地官员称难安置归国者</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245740.md#1">【翻墙必看】分析：中共到底救不救恒大</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245793.md#1">被传怀上第三胎 孙俪工作室幽默回应</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/19/n13245673.md#1">澳总理：不后悔与美英签署核潜艇协议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243341.md#1">谢金河：中国房企骨牌效应开始 最终影响内需</a><br>
 <a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/18/n13243075.md#1">【中国观察】林彪刺毛50年与公安暗杀习的疑云</a><br>
@@ -105,19 +105,19 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 383,817,916 人
+!共 383,818,965 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246137.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13246173-2021-09-20_103512-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246137.md#1">广州警察用膝盖压司机致瘫软 视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243972.md#1">用人权换气候合作？美议员忧拜登政府会让步</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243241.md#1">创建“铁路工人节” 火车司机李伟杰遭打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241660.md#1">余文生律师妻子许艳被禁出门 吁外界关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241453.md#1">巴中监狱称探视系统升级 不许黄琦母亲会见儿子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246128.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/10/1110171252432320-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246128.md#1">总价均超1500万 深圳龙华豪宅业主集体要求退房</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13231438.md#1">小型中企在美上市 圈钱与做空游戏频上演</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242789.md#1">流水线空无一人 莆田鞋业遭疫情重创</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050312-7be0ed7e4faf55601229d61bb0cc739a@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243606.md#1">上海原副市长兼公安局长龚道安受贿 当庭认罪</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244442.md#1">【翻墙必看】女生举报遭中共马列教授猥亵</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244181.md#1">美台四大举措可对中共攻台进行威慑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244023.md#1">中共申请加入CPTPP 澳洲：先撤销报复性关税</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/2-39-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240953.md#1">四川泸县强震 泸州酒企200余吨白酒泄漏</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240487.md#1">【一线采访】江西老妇被逼打疫苗后昏迷两次</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245816.md#1">三退声明精选（2021/09/19）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243423.md#1">吴迪团伙攫金6.5亿 石家庄8警察充当保护伞</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237532.md#1">中国房价增速为八个月来最慢 专家谈背后原因</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
-<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13240246.md#1">韩朝各射导弹 两岸军事专家怎么看</a><br>
-<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/14/n13234584.md#1">【独家】习当局为何肃不清周永康的余毒</a><br>
-<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/14/n13231700.md#1">中美角逐东南亚 专家点评谁会输</a><br>
-<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13222817.md#1">【独家】文件泄河南公安隐形捞钱方式</a><br>
-<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/6/n13214082.md#1">【内幕】文件泄河南商丘稳控访民名单</a><br>
-<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/9/n13220489.md#1">【独家】讲真相活动 辽宁当局最惧怕</a><br>
-<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/9/n13220766.md#1">史上一只黑天鹅预告一场巨变  五行学说真玄妙</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/8/n13220263.md#1">【古韵流芳】晏殊《浣溪沙》花落燕归来的理趣</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/5/n13212383.md#1">修身齐家为国尽职 唐名臣柳公绰有古之遗风</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/31/n13200714.md#1">高智晟先生步入社会时经历的人心冷暖（下）</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/7/n13217507.md#1">【未解之谜】预言死亡 最离奇轮回故事</a><br>
-<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/3/n13209078.md#1">【百年真相】“大爱”还是惨剧？三千孤儿入内蒙真相</a><br>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246137.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13246173-2021-09-20_103512-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246137.md#1">广州警察用膝盖压司机致瘫软 视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245484.md#1">DAFOH主任：中共活摘器官行径可输出到他国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243972.md#1">用人权换气候合作？美议员忧拜登政府会让步</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243241.md#1">创建“铁路工人节” 火车司机李伟杰遭打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241660.md#1">余文生律师妻子许艳被禁出门 吁外界关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241453.md#1">巴中监狱称探视系统升级 不许黄琦母亲会见儿子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246128.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/10/1110171252432320-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246128.md#1">怀疑遭诈欺 深圳龙华豪宅业主集体要求退房</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245708.md#1">中国华融负债超万亿 6800亿债务即将到期</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245257.md#1">恒大财富公告“实物兑付” 投资者担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13231438.md#1">小型中企在美上市 圈钱与做空游戏频上演</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242789.md#1">流水线空无一人 莆田鞋业遭疫情重创</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242870.md#1">消息：李嘉诚再次出售大陆地产项目</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246143.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13004871-501538-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/20/n13246143.md#1">中共禁台水果 吴钊燮：它这样还想进CPTPP？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245401.md#1">中共再禁两种台湾水果 台拟诉诸世贸组织</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245262.md#1">不满杜特蒂亲共 菲律宾拳王宣布角逐总统</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243606.md#1">上海原副市长兼公安局长龚道安受贿 当庭认罪</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244442.md#1">【翻墙必看】女生举报遭中共马列教授猥亵</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13244181.md#1">美台四大举措可对中共攻台进行威慑</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/2-39-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245691.md#1">病毒溯源 《柳叶刀》文章吁进行公开透明辩论</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243430.md#1">福建Delta疫情传4市 流出人口逾14万人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13242886.md#1">惠州一轿车撞路边摊档后起火 致6死13伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13241331.md#1">北京一公交车撞上行人 致1死4伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240953.md#1">四川泸县强震 泸州酒企200余吨白酒泄漏</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/17/n13240487.md#1">【一线采访】江西老妇被逼打疫苗后昏迷两次</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245638.md#1">曾三次夺得金像奖 香港特效导演钟智行病逝</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13245816.md#1">三退声明精选（2021/09/19）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244915.md#1">河北一公司法人自杀获救 指衡水移动欠钱不给</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/19/n13244420.md#1">三退声明精选（2021/09/18）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/18/n13243423.md#1">吴迪团伙攫金6.5亿 石家庄8警察充当保护伞</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13237532.md#1">中国房价增速为八个月来最慢 专家谈背后原因</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13239193-ef5a28e5d03aac6f152ead0fbb9ad82b-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/16/n13238564.md#1">新东方在线关闭K12业务 近四千教师面临失业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/13/n13230258.md#1">【名家专栏】中共的“盾牌加长矛”战略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/10/n13225377.md#1">胡歌：出道以来只为了证明自己是个演员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/7/n13217362.md#1">中共禁老师校外补课 教唆学生举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205604.md#1">【一线采访】大陆培训机构倒闭 家长维权难</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213741.md#1">双减冲击中国家庭：教育乱象 谁之过</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/6/n13213551.md#1">双减冲击中国家庭：减的是负担还是希望</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183383.md#1">【独家】陕西“千人计划”名单曝光</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/9/1/n13203539.md#1">【独家】习思想进课堂 大学生首当其冲</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/26/n13188642.md#1">【独家】辽宁文件泄中共在网络领域抹黑西方</a><br>
+<a href="https://github.com/cdbkmw3667/djy/blob/master/gb/21/8/24/n13183636.md#1">【独家】文件泄辽宁收集在华韩国人活动轨迹</a><br>
+<br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/14/n13234395.md#1">草原女王：成吉思汗的监国公主阿剌海别吉</a><br>
+<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/2/n13204305.md#1">《普桑与神》Nicolas Poussin（上）</a><br>
+<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/11/n13225731.md#1">乱世在劫妖魔出 张天师承命振天纲</a><br>
+<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/3/n13207782.md#1">【人生之钥】清代商人用什么巧方教子成材？</a><br>
+<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/17/n13242572.md#1">【古韵流芳】岳飞《满江红》慷慨悲壮神来之笔</a><br>
+<a href="https://github.com/zdhfsi3794/djy/blob/master/gb/21/9/15/n13237143.md#1">【百年真相】最惨海归博士 萧光琰文革遭灭门</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/brkhkd3127/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
